tests/negative/test_fnc_redef_no_name_mangle.orb
fnc foo (x:i32) ();
fnc foo::noNameMangle (y:i64) ();

fnc main () () {};